<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.activities.CreateNoteActivity">

    <item
        android:id="@+id/color_note"
        android:icon="@drawable/ic_baseline_more_vert_24"
        android:title="@string/select_one_color"
        app:showAsAction="always"
        >

        <menu>
            <item android:id="@+id/blue"
                android:title="@string/blue"/>

            <item android:id="@+id/red"
                android:title="@string/red"/>

            <item android:id="@+id/yellow"
                android:title="@string/yellow"/>

            <item android:id="@+id/orange"
                android:title="@string/orange"/>

            <item android:id="@+id/black"
                android:title="@string/black"/>

            <item android:id="@+id/green"
                android:title="@string/green"/>

            <item android:id="@+id/white"
                android:title="@string/white"
                />
        </menu>
    </item>
</menu>