<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.SignInActivity">

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/app_title"
        style="@style/WelcomeInitText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp40"
        android:gravity="center"
        android:text="@string/app_name_normalized"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/register_text"
        style="@style/WelcomeSubtitleText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/create_new_user"
        app:layout_constraintTop_toBottomOf="@id/app_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp10"
        app:layout_constraintBottom_toTopOf="@id/center">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/dp10"
        android:layout_marginEnd="@dimen/dp24"
        app:layout_constraintTop_toBottomOf="@id/center"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/register_button"
        style="@style/LoginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp24"
        android:text="@string/register_your_new_user"
        app:layout_constraintTop_toBottomOf="@id/password" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_back_button"
        style="@style/NewUserButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginTop="@dimen/dp30"
        android:layout_marginEnd="@dimen/dp24"
        android:layout_marginBottom="@dimen/dp30"
        android:text="@string/back_to_login"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>