<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.activities.ForgotPasswordActivity">

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WelcomeInitText"
        android:layout_marginTop="@dimen/dp40"
        android:gravity="center"
        android:text="@string/app_name_normalized"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/forget_password_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WelcomeSubtitleText"
        android:gravity="center"
        android:text="@string/recover_your_password"
        app:layout_constraintTop_toBottomOf="@id/app_title"/>



    <com.google.android.material.button.MaterialButton
        android:id="@+id/recover_password_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        style="@style/LoginButton"
        android:text="@string/click_here_to_recover"
        app:layout_constraintTop_toBottomOf="@id/center"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp30"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        style="@style/NewUserButton"
        android:text="@string/back_to_login"
        android:layout_marginTop="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>