<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dp8"
    android:background="@color/background"
    tools:context=".MainActivity">

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/app_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WelcomeInitText"
        android:layout_marginTop="@dimen/dp40"
        android:gravity="center"
        android:text="@string/app_name_normalized"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/login_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/WelcomeSubtitleText"
        android:gravity="center"
        android:text="@string/login_to_continue"
        app:layout_constraintTop_toBottomOf="@id/app_title"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp10"
        app:layout_constraintBottom_toTopOf="@id/center"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24">

        <EditText
            android:id="@+id/loging_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/your_email"
            android:inputType="textEmailAddress"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout><com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp10"
        app:layout_constraintTop_toBottomOf="@id/center"
        android:layout_marginStart="@dimen/dp24"
        app:passwordToggleEnabled="true"
        android:layout_marginEnd="@dimen/dp24">

        <EditText
            android:id="@+id/logging_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Your password"
            android:inputType="textPassword"
            android:importantForAutofill="no" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        style="@style/LoginButton"
        android:text="@string/log_in"
        android:layout_marginTop="@dimen/dp30"
        app:layout_constraintTop_toBottomOf="@id/password"/>

    <TextView
        android:id="@+id/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        style="@style/ForgetPasswordText"
        android:layout_marginTop="@dimen/dp5"
        android:text="@string/forget_password"
        app:layout_constraintTop_toBottomOf="@id/login_button"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/new_user_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dp30"
        android:layout_marginStart="@dimen/dp24"
        android:layout_marginEnd="@dimen/dp24"
        style="@style/NewUserButton"
        android:text="@string/create_new_user"
        android:layout_marginTop="@dimen/dp30"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>