<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/background"
  tools:context=".ui.activities.NotesActivity">

  <androidx.appcompat.widget.Toolbar
    android:id="@+id/activity_note_toolbar"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_500"
    app:menu="@menu/notes_menu"
    android:subtitle="@string/toolbar_subtitle"
    android:title="@string/app_name_normalized"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"/>

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/recycler_notes"
    android:background="@color/background_notes"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp0"
    android:padding="@dimen/dp8"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintTop_toBottomOf="@id/activity_note_toolbar" />

  <com.google.android.material.floatingactionbutton.FloatingActionButton
    android:id="@+id/new_button"
    style="@style/fBA"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/dp12"
    android:contentDescription="@string/add_new_note"
    android:src="@drawable/ic_baseline_add_24"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>