<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/background"
    android:padding="@dimen/dp8"
    android:layout_height="match_parent"
    tools:context=".ui.activities.CreateNoteActivity">

    <View
        android:id="@+id/center"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/create_note_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
          android:layout_width="match_parent"
          android:layout_height="match_parent">

            <ImageView
              android:id="@+id/back_btn"
              android:layout_width="wrap_content"
              app:layout_constraintTop_toTopOf="parent"
              app:layout_constraintBottom_toBottomOf="parent"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_height="wrap_content"
              android:src="@drawable/ic_baseline_back_arrow_24"
              android:contentDescription="@string/black" />

            <EditText
              android:id="@+id/title_note"
              android:layout_width="@dimen/dp0"
              android:layout_height="match_parent"
              android:textStyle="bold"
              style="@style/editTextBackGround"
              android:paddingTop="@dimen/sp12"
              android:layout_marginStart="@dimen/dp8"
              android:textSize="@dimen/sp24"
              android:hint="@string/enter_your_note_title"
              android:importantForAutofill="no"
              app:layout_constraintStart_toEndOf="@id/back_btn"
              app:layout_constraintEnd_toEndOf="parent"
              android:inputType="text" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/body_note"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp0"
        android:textSize="@dimen/sp20"
        android:paddingHorizontal="@dimen/dp16"
        android:paddingVertical="@dimen/dp8"
        style="@style/editTextBackGround"
        android:layout_marginTop="@dimen/dp15"
        android:hint="@string/enter_your_text_here"
        android:background="@color/white"
        android:gravity="top|start"
        android:inputType="textMultiLine"
        app:layout_constraintTop_toBottomOf="@id/create_note_toolbar"
        app:layout_constraintBottom_toTopOf="@id/center"
        android:importantForAutofill="no" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/new_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp12"
        style="@style/fBA"
        android:src="@drawable/ic_baseline_save_24"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/add_new_note" />

</androidx.constraintlayout.widget.ConstraintLayout>